--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 					<a href="https://github.com/sangramapancasadewa?tab=repositories">
 					<img src="https://avatars.githubusercontent.com/u/112786394?v=4" alt="img" style="object-fit: cover;">
 					</a>
-					<span>Sangrama Panca Sadewa</span>
-                    <font size="3">Hallo Saya Berumur 17 Tahun Dan Bersekolah Di SMA Muhammadiyah 1 Semarang,Hobi Saya Adalah Menggambar Bahasa Pemrograman Yang Saya Kuasai Berupa Python,Javascript(Nodejs),HTML,CSS,dan Php.</font>
+					<span>Profile Sangrama</span>
+                    <font size="3">Hallo Nama Saya Sangrama Panca Sadewa Umur 17 Tahun Dan Bersekolah Di SMA Muhammadiyah 1 Semarang,Hobi Saya Adalah Menggambar Bahasa Pemrograman Yang Saya Kuasai Berupa Python,Javascript(Nodejs),HTML,CSS,dan Php.</font>
 					<p>- Life Is Not Daijobu</p>
 				</section>
 			</div>
@@ -38,7 +38,7 @@
 							<ul class="nav_links">
 								<li class="nav_link"><a href="#" onClick="window.location.reload();">Home</a></li>
 								<li class="nav_link"><a href="http://wa.me/6289519318271">Contact Me</a></li>
-								<li class="nav_link"><a href="https://github.com/sangramapancasadewa?tab=repositories">Repository</a></li>
+								<li class="nav_link"><a href="https://www.e-ujian.com">E-Ujian</a></li>
 							</ul>
 						</div>
 					</nav>
