--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<section class="main2">
 						<ul>
 							<li><a target="_blank" href="https://t.me/sangramapanca"><i class="fab fa-telegram"></i></a></li>
-							<li><a target="_blank" href="https://github.com/sangramapancasadewa"><i class="fab fa-github"></i></a></li>
+							<li><a target="_blank" href="https://www.youtube.com/@xyugarsars1652"><i class="fab fa-youtube"></i></a></li>
 							<li><a target="_blank" href="https://instagram.com/sangrama.panca"><i class="fab fa-instagram"></i></a></li>
 						</ul>
 					</section>
