--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<ul class="nav_links">
 								<li class="nav_link"><a href="#" onClick="window.location.reload();">Home</a></li>
 								<li class="nav_link"><a href="http://wa.me/6289519318271">Contact Me</a></li>
-								<li class="nav_link"><a href="https://www.e-ujian.com">E-Ujian</a></li>
+								<li class="nav_link"><a href="#" onClick="history.go(-2);">E-Ujian</a></li>
 							</ul>
 						</div>
 					</nav>
