--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 						<div class="header_links">
 							<ul class="nav_links">
 								<li class="nav_link"><a href="#" onClick="window.location.reload();">Home</a></li>
-								<li class="nav_link"><a href="http://wa.me/6289519318271">Contact Me</a></li>
-								<li class="nav_link"><a href="#" onClick="history.go(-2);">E-Ujian</a></li>
+								<li class="nav_link"><a href="https://wa.me/6289519318271">Contact Me</a></li>
+								<li class="nav_link"><a href="https://www.e-ujian.com/login">E-Ujian</a></li>
 							</ul>
 						</div>
 					</nav>
