--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 						<div class="header_links">
 							<ul class="nav_links">
 								<li class="nav_link"><a href="#" onClick="window.location.reload();">Home</a></li>
-								<li class="nav_link"><a href="https://wa.me/6289519318271">Contact Me</a></li>
+								<li class="nav_link"><a href="https://main2.fresto.biz/smamuh1smg/">Afresto</a></li>
 								<li class="nav_link"><a href="https://www.e-ujian.com/login">E-Ujian</a></li>
 							</ul>
 						</div>
 					</nav>
 					<section class="main2">
 						<ul>
-							<li><a target="_blank" href="https://t.me/sangramapanca"><i class="fab fa-telegram"></i></a></li>
+							<li><a target="_blank" href="https://wa.me/6289519318271"><i class="fab fa-whatsapp"></i></a></li>
 							<li><a target="_blank" href="https://www.youtube.com/@xyugarsars1652"><i class="fab fa-youtube"></i></a></li>
 							<li><a target="_blank" href="https://instagram.com/sangrama.panca"><i class="fab fa-instagram"></i></a></li>
 						</ul>
